--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -46,4 +46,14 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/aboutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dip"
+        android:onClick="onClick"
+        android:text="@string/about" />
+
 </RelativeLayout>
