--- a/res/layout/gyaru.xml
+++ b/res/layout/gyaru.xml
@@ -30,4 +30,14 @@
             android:src="@drawable/gyaru2" />
     </FrameLayout>
 
+    <ImageView
+        android:id="@+id/handImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:maxWidth="300px"
+        android:src="@drawable/manokawaii"
+        android:visibility="gone" />
+
 </RelativeLayout>
